cmake_minimum_required(VERSION 3.0)
project(psfpp)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)

set(CMAKE_COLOR_DIAGNOSTICS TRUE)

set(DEPENDS_DIR_BASENAME "deps")
set(DEPENDS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/${DEPENDS_DIR_BASENAME}")

set(HEADERS_DIR_BASENAME "include")
set(HEADERS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/${HEADERS_DIR_BASENAME}")

set(SOURCES_DIR_BASENAME "src")
set(SOURCES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/${SOURCES_DIR_BASENAME}")

file(GLOB_RECURSE HEADERS
	${HEADERS_DIR}/*.hpp
)

file(GLOB_RECURSE SOURCES
	${SOURCES_DIR}/*.cpp
)

add_library(${PROJECT_NAME} ${SOURCES} ${HEADERS})

target_compile_options(${PROJECT_NAME} PRIVATE
  $<$<CXX_COMPILER_ID:MSVC>:/W4>
  $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic>
)

target_include_directories(${PROJECT_NAME} PUBLIC ${HEADERS_DIR})
